# native-macos-log-analyzer

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-native-macos-log-analyzer  bazel-out  bazel-testlogs
src/main/: AggreGator.cpp  BUILD.bazel
tools/: setup.sh
